--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
       <div class="col col-12">
         
         <!-- Social links -->
-        {% bookshop_include social-link %}
+        {% include social-link.html %}
 
 
 
