--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -3,7 +3,11 @@ layout: default
 ---
 
 {% assign tag=page.tag | capitalize %}
-{% bookshop page-heading title=tag %}
+
+<!-- Page heading for tag pages -->
+<section class="section page-heading">
+  <h2>{{ tag }}</h2>
+</section>
 
 <div class="container">
   <div class="row">
@@ -61,9 +65,4 @@ layout: default
   </div>
 </div>
 
-{% bookshop
-  newsletter newsletter_title=site.data.newsletter.newsletter_title
-  newsletter_description=site.data.newsletter.newsletter_description
-  newsletter_identifier=site.data.newsletter.newsletter_identifier
-  newsletter_button=site.data.newsletter.newsletter_button
-%}
+{% include components/newsletter.html block={} %}
